Refactor dialog message handling in TestCase1600567 to support multiple valid messages