@@ -41,6 +41,7 @@ import org.junit.Assert;
 import org.junit.Assume;
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 // Invoke each API from non-allowed apps. the request should be blocked.
@@ -51,7 +52,7 @@ public class TestCase1600567 extends AbstractMsalBrokerTest {
     @Test
     public void test_1600567_nonAllowedBrokerApp() throws Throwable {
         // Skip test if preconditions are not met
-        Assume.assumeTrue( "Only run this test if there are no local flights",
+        Assume.assumeTrue("Only run this test if there are no local flights",
                 BuildConfig.COPY_OF_LOCAL_FLIGHTS_FOR_TEST_PURPOSES.isEmpty()
         );
         final BrokerHost brokerHost = new BrokerHost();
@@ -126,7 +127,7 @@ public class TestCase1600567 extends AbstractMsalBrokerTest {
      */
     private void confirmCallingAppNotVerified(@NonNull final BrokerHost brokerHost) {
         String dialogMessage = brokerHost.dismissDialog();
-        final List<String> validDialogMessages = List.of(
+        final List<String> validDialogMessages = Arrays.asList(
                 "Calling app could not be verified", // This is the client message for older versions of Broker.
                 "is not in the list of allowed callers", // This is the broker auth message for latest version of Broker.
                 "Only apps hosting the broker can invoke this API" // This is the client message for the latest version of Broker.
